--- a/.github/workflows/coffin.yml
+++ b/.github/workflows/coffin.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
     - name: Download Ngrok & NSSM
       run: |
-        Invoke-WebRequest https://github.com/Cyb3rgirl/coffinrdp/blob/main/Files/ngrok.exe?raw=true -OutFile ngrok.exe
-        Invoke-WebRequest https://raw.githubusercontent.com/Cyb3rgirl/coffinrdp/main/nssm.exe -OutFile nssm.exe
+        Invoke-WebRequest https://raw.githubusercontent.com/Cyb3rgirl/coffinrdp/main/Files/ngrok.exe -OutFile ngrok.exe
+        Invoke-WebRequest https://raw.githubusercontent.com/Cyb3rgirl/coffinrdp/main/Files/nssm.exe -OutFile nssm.exe
     - name: Copy NSSM & Ngrok to Windows Directory.
       run: | 
         copy nssm.exe C:\Windows\System32
